Closed Bug 343383 Opened 19 years ago Closed 19 years ago

cookies don't work in 'suiterunner' seamonkey

Categories

(SeaMonkey :: UI Design, defect)

defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: infoman1985, Assigned: standard8)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (compatible; Konqueror/3.5; Linux; X11; i686; ru) KHTML/3.5.2 (like Gecko) Kubuntu 6.04 Dapper Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060702 / I compiled seamonkey from cvs (build id=2006070200) and cannot login to any site. tried to change cookie settings, but no effect. Reproducible: Always Steps to Reproduce: 1. go to gmail 2. try to login Actual Results: Can't login. Gmail says that cookies are disabled Expected Results: Successful login From about:buildconfig gcc version 4.0.2 20050808 (prerelease) (Ubuntu 4.0.1-4ubuntu9) Compiler flags gcc -Wall -W -Wno-unused -Wpointer-arith -Wcast-align -Wno-long-long -pedantic -pthread -pipe c++ -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-long-long -pedantic -fshort-wchar -pthread -pipe Configure arguments --enable-optimize --disable-debug --enable-default-toolkit=cairo-gtk2 --enable-glitz --enable-xft --disable-static --enable-shared --disable-tests --enable-canvas --enable-svg --enable-strip --enable-elf-dynstr-gc --enable-application=suite --enable-static-mail
Confirming with a suiterunner trunk build. Another test site for cookies is for example http://www.tempesttech.com/cookies/cookietest1.asp, in normal SeaMonkey trunk builds it works, in suiterunner it does not.
Status: UNCONFIRMED → NEW
Ever confirmed: true
For some reason, suiterunner is using nsMsgContentPolicy as its nsICookiePermission service. It's building extensions/cookie/ but not using it. How does it decide which one to use?
Assignee: nobody → jag
Component: Networking: Cookies → XP Apps
Product: Core → Mozilla Application Suite
QA Contact: networking.cookies
Blocks: suiterunner
(In reply to comment #2) > For some reason, suiterunner is using nsMsgContentPolicy as its > nsICookiePermission service. It's building extensions/cookie/ but not using > it. How does it decide which one to use? This is probably something to do with MOZ_XUL_APPs doing things (registering) slightly differently. It looks like nsMsgContentPolicy exists in "standard" SeaMonkey as well so we should be able to use the right one. I'll take a look at it later, I wondered why we were getting a lot of mailnews warnings...
Assignee: jag → bugzilla
OS: Linux → All
Hardware: PC → All
nsMsgCookiePolicy is only required for thunderbird as it doesn't have access to the same things that suite does (it also caused a duplicate registered contract id, so the extensions/cookie one was being overwritten by the nsMsgCookiePolicy one). This also fixes the nsMsgUtils.cpp warnings seen when using the browser part of suiterunner. I've tested it with the link in comment 2 (thanks Frank) and it seems to work ok.
Attachment #227952 - Flags: superreview?(bienvenu)
Attachment #227952 - Flags: review?(neil)
Attachment #227952 - Flags: superreview?(bienvenu) → superreview+
Attachment #227952 - Flags: superreview?
Attachment #227952 - Flags: superreview+
Attachment #227952 - Flags: review?(neil)
Attachment #227952 - Flags: review+
Sorry for stomping on the sr+, I'm not sure how I managed that :-/
Comment on attachment 227952 [details] [diff] [review] nsMsgCookiePolicy is only required for thunderbird. Setting sr+ from bienvenu
Attachment #227952 - Flags: superreview? → superreview+
Patch checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: