Bug 343383 cookies don't work in 'suiterunner' seamonkey. r=neil,sr=bienvenu