mailnews/build/nsMailModule.cpp
@@ -345,7 +345,9 @@ NS_GENERIC_FACTORY_CONSTRUCTOR_INIT(nsMessengerOSXIntegration, Init)
 #endif
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsMessengerContentHandler)
 NS_GENERIC_FACTORY_CONSTRUCTOR_INIT(nsMsgContentPolicy, Init)
+#ifdef MOZ_THUNDERBIRD
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsMsgCookiePolicy)
+#endif
 
 ////////////////////////////////////////////////////////////////////////////////
 // addrbook factories
@@ -865,11 +867,13 @@ static const nsModuleComponentInfo gComponents[] = {
        NS_MSGCONTENTPOLICY_CONTRACTID,
        nsMsgContentPolicyConstructor,
        RegisterContentPolicy, UnregisterContentPolicy },
+#ifdef MOZ_THUNDERBIRD
     { "mail cookie policy enforcer",
       NS_MSGCOOKIEPOLICY_CID,
       NS_COOKIEPERMISSION_CONTRACTID,
       nsMsgCookiePolicyConstructor
     },
+#endif
     
     ////////////////////////////////////////////////////////////////////////////////
     // addrbook components
